--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
     "name": "YouTube Video Download Bot",
     "description": "Telegram bot that can search and download youtube videos, playlists.",
     "repository": "https://github.com/sanila2007/YouTube_bot_telegram",
-    "logo": "https://telegra.ph/file/f7dc9203585394d0595b1.jpg",
+    "logo": "https://www.google.com/url?sa=i&url=https%3A%2F%2Fdoa.gov.lk%2Fyoutube-logo%2F&psig=AOvVaw1Mkpx04Y3tlZ812CwjmJPp&ust=1672041015886000&source=images&cd=vfe&ved=0CA8QjRxqFwoTCLDIq6eklPwCFQAAAAAdAAAAABAI",
     "keywords": [
         "youtube bot",
         "video downloader",
