Revert "Free Plan Remove "

--- a/app.json
+++ b/app.json
@@ -24,6 +24,12 @@
             "required": true
         }
     },
+    "formation": {
+    "worker": {
+      "quantity": 1,
+      "size": "free"
+    }
+  },
     "buildpacks": [
         {
             "url": "heroku/python"
